--- a/src/components/CKDForm.css
+++ b/src/components/CKDForm.css
@@ -20,10 +20,12 @@
   background-color: var(--white);
   z-index: 1000;
   overflow-y: auto;
+  overflow-x: hidden;
   width: 100vw;
   height: 100vh;
   margin: 0;
   padding: 0;
+  -webkit-overflow-scrolling: touch;
 }
 
 .form-container {
@@ -33,6 +35,9 @@
   position: relative;
   margin: 0;
   padding: 0;
+  padding-bottom: 100px;
+  display: flex;
+  flex-direction: column;
 }
 
 .preview-container {
@@ -41,8 +46,11 @@
   width: 100vw;
   margin: 0;
   padding: 0;
+  padding-bottom: 100px;
   box-shadow: none;
   border-radius: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 .form-header {
@@ -92,12 +100,17 @@
   margin: 0 auto;
   width: 100%;
   box-sizing: border-box;
+  flex: 1;
+  padding-bottom: 120px;
 }
 
 .preview-content {
   padding: 30px;
   max-width: 1200px;
   margin: 0 auto;
+  flex: 1;
+  padding-bottom: 120px;
+}
   width: 100%;
   box-sizing: border-box;
 }
